fixed alignments

--- a/index.css
+++ b/index.css
@@ -3,9 +3,6 @@
     --main-pink:#0c0c0c;
     --main-white: #efefef;
 }
-html {
-    scroll-behavior: smooth;
-}
 * {
     margin: 0;
     padding: 0;
@@ -54,15 +51,15 @@ body {
     color: whitesmoke;
 }
 .project-header {
-    text-align: center;
+    display: flex;
+    justify-content: space-evenly;
     margin: 6rem;
     color: rgb(90, 88, 88);
 }
 #project-list {
     display: flex;
     justify-content: space-evenly;
-    flex-wrap: wrap;
-    align-items: baseline;
+    
 }
 .project {
     background: var(--main-gray);
@@ -75,7 +72,7 @@ body {
 }
 #project-list a {
     text-decoration: none;
-    
+    color: rgb(90, 88, 88);
 }
 figcaption {
     display: flex;
@@ -88,22 +85,29 @@ figcaption {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    height: 6rem;
-    margin: 6rem;
+    height: 100vh;
     flex-wrap: wrap;
+    text-align: center;
 }
 
 #contact a {
     text-decoration: none;
     color: rgb(98, 125, 64);
-    
 }
 #contact a:hover {
     color: rgb(90, 88, 88)
 }
-.love {
+.contact-header {
+    color: rgb(90, 88, 88);
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+   font-size: 6rem;
+    text-align: center;
+   margin-bottom: 2rem;
+   }
+.subheader {
+    color: rgb(90, 88, 88);
+    margin-bottom: 6rem;
 }
-
 footer {
     display: flex;
     justify-content: center;
@@ -111,6 +115,7 @@ footer {
     height: 4rem;
     background-color: lightgrey;
     color: rgb(98, 125, 64);
+    font-size: 1rem;
 }
 /*1200px / 16px = 75em */
 @media (max-width: 75em) {
